add servers and server nested components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
- <input type="text"[(ngModel)]="name">
- <p>{{ name }}</p>
+<H3>I am in the AppComponent!</H3>
+<hr>
+<app-servers></app-servers>
 
