--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,14 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<div> class="container"
+  <div class="row">
+    <div class="col-xs-12"></div>
+  </div>
+</div>
 <div style="text-align:center">
 <H3>I am in the AppComponent!</H3>
 <hr>
 <app-servers></app-servers>
+<app-warning-alert></app-warning-alert>
+<app-success-alert></app-success-alert>
+
 
