Changed styling for alerts

--- a/src/app/success-alert/success-alert.component.css
+++ b/src/app/success-alert/success-alert.component.css
@@ -1,6 +1,7 @@
 .success {
-    color: green;
-    background: yellow;
+    padding: 20px;
+    background: palegreen;
+    border: 1px solid red;;
 }
 .center {
     text-align: center;
