--- a/src/app/warning-alert/warning-alert.component.css
+++ b/src/app/warning-alert/warning-alert.component.css
@@ -1,4 +1,5 @@
 .alert {
-    color: yellow;
-    background: black;
+    padding: 20px;
+    background: mistyrose;
+    border: 1px solid red;;
 }
