--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,2 +1,14 @@
+<label>Server Name</label>
+<!-- <input type="text" class="form-control"
+(input)="onUpdateServerName($event)"> -->
+<input type="text" class="form-control"
+[(ngModel)]="serverName">
+<p>{{ serverName }}</p>
+<button class="btn btn-primary"
+    [disabled]="!allowNewServer"
+    (click)="onCreateServer()">Add Server</button>
+    <p>allowNewServer is {{ allowNewServer }}</p>
+    <!-- <p [innerText]="allowNewServer"></p> -->
 <app-server></app-server>
+<p>{{ serverCreationStatus }}</p>
 <app-server></app-server>
