--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -9,6 +9,12 @@
     (click)="onCreateServer()">Add Server</button>
     <p>allowNewServer is {{ allowNewServer }}</p>
     <!-- <p [innerText]="allowNewServer"></p> -->
-<app-server></app-server>
+
+    <input type="text" class="form-control" [(ngModel)]="userName"><p>{{ userName }}</p>
+<button class="btn btn-primary"
+[disabled]="userName == ''"
+(click)="onReset()">Reset UserName</button>
+<p>{{ userName.length }}</p>
+    <app-server></app-server>
 <p>{{ serverCreationStatus }}</p>
 <app-server></app-server>
